--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "autoprefixer": "10.4.15",
-    "next": "13.4.19",
+    "chart.js": "^4.4.0",
+    "next": "^13.4.19",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.1.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3"
   }
 }
